# bbfx-revival

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bbfx  bbfx-studio  resources.cfg  run-demo.ps1  run-demo.sh  vcpkg.json
.github/workflows/: ci.yml
data/templates/: default.bbfx-project
docs/: architecture.md  dependencies.md  environment-setup.md  ogre-lua-announcement.md
lua/: animation.lua  audio.lua  bbfx_minimal.lua  camera.lua  chord.lua  compo.lua  compositors.lua  console.lua  controller.lua  declarative.lua  demo.lua  effect.lua  errorhandler.lua  exporter.lua  functional.lua  helpers.lua  hotreload.lua  hud.lua  input.lua  joystick_mapping.lua  keycodes.lua  keymap.lua  logger.lua  note.lua  object.lua  ogre_controller.lua  paramspec.lua  player.lua  preset_format.lua  profiler.lua  recorder.lua  remdebug.lua  sequencer.lua  shader.lua  sol2_compat.lua  studio_chord.lua  subgraph.lua  sync.lua  temporal_nodes.lua  test_delete.lua  (+12 more)
lua/demos/: USAGE.md  demo_audio.lua  demo_declarative.lua  demo_geosphere.lua  demo_gpu.lua  demo_particles.lua  demo_production.lua  demo_shell.lua  demo_studio.lua  demo_v25.lua  demo_video.lua
lua/presets/: audio_reactive_sphere.lua  aureola.lua  auto_track.lua  bloom_dream.lua  bw_high_contrast.lua  color_shift.lua  depth_of_field.lua  dolly_zoom.lua  elastic_bounce.lua  fireflies.lua  flash_strobe.lua  fly_through.lua  fractal_growth.lua  geosphere_explode.lua  glitch_fx.lua  gradient_pulse.lua  heat_distort.lua  jet_exhaust.lua  material_cycle.lua  mesh_morph_cycle.lua  mirror_kaleidoscope.lua  monochrome_fade.lua  motion_trail.lua  old_film.lua  orbit_slow.lua  particle_symphony.lua  perlin_breath.lua  perlin_pulse.lua  rain_drops.lua  rainbow_cycle.lua  shake_beat.lua  smoke_rise.lua  snowfall.lua  spark_burst.lua  star_field.lua  starwars_tribute.lua  texture_sweep.lua  texture_vjing.lua  tunnel_infinite.lua  vertex_noise.lua  (+1 more)
lua/sets/: demo_fanions.lua  demo_set.lua
lua/shell/: client.lua  client.py  server.lua
lua/templates/: ambient.lua  audio_reactive.lua  beat_machine.lua  bonneballe_basic.lua  dnb.lua  dubstep.lua  empty.lua  full_performance.lua  hiphop.lua  house.lua  particle_show.lua  shader_lab.lua  techno.lua  video_mix.lua
resources/materials/scripts/: BlackAndWhite.glsl  BlackAndWhite.material  Bloom.material  Blur0_vs.glsl  Blur1_vs.glsl  Blur_ps.glsl  DOF.material  DOF_Blend_ps.glsl  DOF_ps.glsl  Embossed.glsl  Embossed.material  Example.material  Glass.material  GlassFP.glsl  OldTV.material  OldTV_ps.glsl  Particles.material  StdQuad.program  StdQuad_vp.glsl  bbfx.material  bbfx_compositors.compositor  bbfx_compositors.material
resources/particles/: Example.particle  bbfx.particle
resources/shaders/: ascii_art.frag  barrel.frag  chromatic_aberration.frag  datamosh.frag  edge_detect.frag  filmgrain.frag  flowfield.frag  invert.frag  kaleidoscope.frag  mandelbrot.frag  passthrough.frag  passthrough.vert  perlin_deform.glsl  perlin_gpu.vert  pixel_sort.frag  pixelate.frag  plasma.frag  posterize.frag  reaction_diffusion.frag  selection_highlight.frag  selection_highlight.vert  sphere_trace.frag  truchet.frag  tunnel.frag  twist.vert  vhs.frag  vignette.frag  voronoi.frag  wave_deform.frag  wave_gpu.vert
src/: bbfx.h  main.cpp  platform.h
src/audio/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioCapture.cpp  AudioCapture.h  BeatDetector.cpp  BeatDetector.h  kiss_fft.h
src/bindings/: bbfx_bindings.cpp  bbfx_bindings.h
src/core/: AnimationNode.cpp  AnimationNode.h  AnimationPort.cpp  AnimationPort.h  Animator.cpp  Animator.h  Engine.cpp  Engine.h  Exception.h  Mutex.h  ParamSpec.cpp  ParamSpec.h  PrimitiveNodes.cpp  PrimitiveNodes.h  StatsOverlay.cpp  StatsOverlay.h
src/fx/: ColorShiftNode.cpp  ColorShiftNode.h  Perlin.h  PerlinFxNode.cpp  PerlinFxNode.h  PerlinVertexShader.cpp  PerlinVertexShader.h  ShaderFxNode.cpp  ShaderFxNode.h  SoftwareVertexShader.cpp  SoftwareVertexShader.h  TextureBlitter.cpp  TextureBlitter.h  TextureBlitterNode.cpp  TextureBlitterNode.h  WaveVertexShader.cpp  WaveVertexShader.h
src/input/: InputManager.cpp  InputManager.h  JoystickManager.cpp  JoystickManager.h  KeyboardManager.cpp  KeyboardManager.h  MouseManager.cpp  MouseManager.h  StdinReader.cpp  StdinReader.h
src/network/: TcpServer.cpp  TcpServer.h
src/record/: InputPlayer.cpp  InputPlayer.h  InputRecorder.cpp  InputRecorder.h  VideoExporter.cpp  VideoExporter.h
src/studio/: Debugger.cpp  Debugger.h  NodeTypeRegistry.cpp  NodeTypeRegistry.h  ResourceEnumerator.cpp  ResourceEnumerator.h  SettingsManager.cpp  SettingsManager.h  StudioApp.cpp  StudioApp.h  StudioEngine.cpp  StudioEngine.h  main_studio.cpp
src/studio/commands/: ChordCommands.cpp  ChordCommands.h  CommandManager.cpp  CommandManager.h  EditCommands.cpp  EditCommands.h  LinkCommands.cpp  LinkCommands.h  NodeCommands.cpp  NodeCommands.h  SceneCommands.cpp  SceneCommands.h  TransformCommands.cpp  TransformCommands.h
src/studio/generators/: MeshGenerator.cpp  MeshGenerator.h
src/studio/nodes/: BeatTriggerNode.cpp  BeatTriggerNode.h  CameraNode.cpp  CameraNode.h  CompositorNode.cpp  CompositorNode.h  FogNode.cpp  FogNode.h  LightNode.cpp  LightNode.h  MapperNode.cpp  MapperNode.h  MathNode.cpp  MathNode.h  MixerNode.cpp  MixerNode.h  ParticleNode.cpp  ParticleNode.h  SceneObjectNode.cpp  SceneObjectNode.h  SkyboxNode.cpp  SkyboxNode.h  SplitterNode.cpp  SplitterNode.h  TriggerNode.cpp  TriggerNode.h
src/studio/panels/: ConsolePanel.cpp  ConsolePanel.h  InspectorPanel.cpp  InspectorPanel.h  NodeEditorPanel.cpp  NodeEditorPanel.h  PerformanceModePanel.cpp  (+11 more)
src/video/: OggReader.cpp  OggReader.h  ReversableClip.cpp  ReversableClip.h  TextureCrossfader.cpp  TextureCrossfader.h  TheoraBlitter.cpp  TheoraBlitter.h  TheoraClip.cpp  TheoraClip.h  TheoraClipNode.cpp  TheoraClipNode.h  TheoraReader.cpp  TheoraReader.h  TheoraSeekMap.cpp  TheoraSeekMap.h
tests/: benchmark.lua  test_longrun.lua
tests/lua/: test_regression.lua
tools/: compile_reverse.bat  dbg_send.py  theora_reverse.cpp
(+17 files in other folders)
